<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/EditorTextView"
            android:text="@string/item_description" />

        <TextView

            style="@style/EditorTextView"
            android:text="@string/item_price" />

        <TextView

            style="@style/EditorTextView"
            android:text="@string/item_quantity" />

        <TextView
            android:id="@+id/adjust_text_view"
            style="@style/EditorTextView"
            android:text="@string/adjust_quantity" />

        <TextView
            android:id="@+id/picture_text_view"
            android:text="@string/item_picture"
            style="@style/EditorTextView" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/description_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/description" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/price"
            android:inputType="number" />

        <EditText
            android:id="@+id/quantity_edit_text"
            style="@style/EditorFieldStyle"
            android:hint="@string/quantity"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/subtract_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lower" />
        </LinearLayout>

        <ImageView
            android:id="@+id/picture_view"
            style="@style/EditorFieldStyle"
            android:src="@drawable/ic_photo_camera_black_36dp"
            android:clickable="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>
</LinearLayout>
